--- a/Azlant/pom.xml
+++ b/Azlant/pom.xml
@@ -32,7 +32,12 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
-				
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+
 		<!-- AspectJ -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
@@ -117,19 +122,19 @@
 			<scope>test</scope>
 		</dependency>      
 		
+		<!-- Persistence (JPA) -->
+		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>
+		    <version>5.2.13.Final</version>
+		</dependency>
+		
 		<!-- Database -->
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
 		    <version>5.1.45</version>
 		</dependency>  
-		
-		<!-- JPA -->
-		<dependency>
-		    <groupId>org.eclipse.persistence</groupId>
-		    <artifactId>eclipselink</artifactId>
-		    <version>2.7.1</version>
-		</dependency>
 	</dependencies>
     <build>
         <plugins>
